kubernetes/apps/observability/goldilocks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Goldilocks
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: goldilocks.png
    gethomepage.dev/description: Goldilocks Utility
    gethomepage.dev/href: https://goldilocks.${SECRET_DOMAIN}
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=goldilocks"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "goldilocks.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: goldilocks-dashboard
          port: 80
